--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Clark Bai</title>
+</head>
+
+<body>
+    <main>
+        <h1>Welcome to my website.</h1>
+        <section>
+            <h2><ins>About me</ins></h2>
+            <p>Hi!</p>
+        </section>
+    </main>
+</body>
+
+</html>
