--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <main>
-        <h1>Welcome to my website.</h1>
-        <section>
-            <h2><ins>About me</ins></h2>
-            <p>Hi!</p>
-        </section>
-    </main>
+    <div class="webpage">
+        <main>
+            <h1>Welcome to my website.</h1>
+            <section>
+                <h2><ins>About me</ins></h2>
+                <p>I am Clark. 👍👍</p>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
